# zvec

./: README.md  pyproject.toml
.github/workflows/: build_test_wheel.yml  build_wheel.yml  linux_arm64_docker_ci.yml  linux_x64_docker_ci.yml  mac_arm64_ci.yml  nightly_coverage.yml
examples/c++/: CMakeLists.txt
examples/c++/db/: main.cc
src/ailego/buffer/: buffer_manager.cc  buffer_manager.h
src/ailego/utility/: concurrency_helper.cc  math_helper.h  memory_helper.cc  string_helper.cc
src/binding/python/: CMakeLists.txt
src/core/framework/: index_cluster.cc  index_context.cc  index_flow.cc  index_helper.cc  index_logger.cc  index_mapping.cc  index_meta.cc  index_plugin.cc  index_version.cc
src/core/interface/: index.cc  index_factory.cc  index_param.cc  index_param.h
src/core/metric/: euclidean_metric.cc  hamming_metric.cc  quantized_integer_metric.cc  quantized_integer_metric_matrix.h
src/core/mixed_reducer/: mixed_streamer_reducer.cc  mixed_streamer_reducer.h
src/core/quantizer/: binary_converter.cc  binary_reformer.cc  cosine_converter.cc  cosine_reformer.cc  half_float_converter.cc  integer_quantizer_converter.cc  integer_quantizer_reformer.cc  mips_converter.cc  mips_reformer.cc  record_quantizer.h
src/core/utility/: basic_refiner.cc  buffer1_storage.cc  buffer_storage.cc  (+8 more)
src/db/: CMakeLists.txt  collection.cc
tests/db/: CMakeLists.txt
tools/core/: bench.cc  bench_original.cc  flow.h  helper.h  index_meta_helper.h  local_builder.cc  local_builder_original.cc  recall.cc  recall_original.cc  txt2vecs.cc  vecs_index_holder.h  vecs_reader.h
(+192 files in other folders)
